--- a/RealTimeDataBinding/App/views/stocks.html
+++ b/RealTimeDataBinding/App/views/stocks.html
@@ -1,18 +1,28 @@
 ﻿<section>
     <h1>SignalR Stock Ticker</h1>
 
-    <input type="button" id="open" value="Open Market" />
-    <input type="button" id="close" value="Close Market" disabled="disabled" />
-    <input type="button" id="reset" value="Reset" />
+    <input type="button" value="Open Market" data-bind="enable: !isMarketOpened, click: openMarket" />
+    <input type="button" value="Close Market" data-bind="enable: isMarketOpened, click: closeMarket" />
+    <input type="button" value="Reset" data-bind="enable: !isMarketOpened, click: reset" />
 
     <h2>Live Stock Table</h2>
     <div id="stockTable">
         <table border="1">
             <thead>
-                <tr><th>Symbol</th><th>Price</th><th>Open</th><th>High</th><th>Low</th><th>Change</th><th>%</th></tr>
+            <tr>
+                <th>Symbol</th><th>Price</th><th>Open</th><th>High</th><th>Low</th><th>Change</th><th>%</th>
+            </tr>
             </thead>
-            <tbody>
-                <tr class="loading"><td colspan="7">loading...</td></tr>
+            <tbody data-bind="foreach: stocks">
+                <tr>
+                    <td data-bind="text: Symbol"></td>
+                    <td data-bind="text: Price"></td>
+                    <td data-bind="text: DayOpen"></td>
+                    <td data-bind="text: DayHigh"></td>
+                    <td data-bind="text: DayLow"></td>
+                    <td><!--<span class="dir {DirectionClass}">{Direction}</span>--><span data-bind="text: Change"></span></td>
+                    <td data-bind="text: PercentChange"></td>
+                </tr>
             </tbody>
         </table>
     </div>
