--- a/RealTimeDataBinding/Views/Durandal/Index.cshtml
+++ b/RealTimeDataBinding/Views/Durandal/Index.cshtml
@@ -1,4 +1,4 @@
-@using System.Web.Optimization
+﻿@using System.Web.Optimization
 @{
     Layout = null;
 }
@@ -35,6 +35,7 @@
         </div>
         
         @Scripts.Render("~/Scripts/vendor")
+        <script type="text/javascript" src="~/signalr/hubs"></script>
         <script type="text/javascript" src="~/Scripts/require.js" data-main="/App/main"></script>
     </body>
 </html>
