--- a/RealTimeDataBinding/App/views/stocks.html
+++ b/RealTimeDataBinding/App/views/stocks.html
@@ -19,12 +19,12 @@
             <tbody data-bind="foreach: stocks">
                 <tr>
                     <td data-bind="text: Symbol"></td>
-                    <td data-bind="text: Price"></td>
-                    <td data-bind="text: DayOpen"></td>
-                    <td data-bind="text: DayHigh"></td>
-                    <td data-bind="text: DayLow"></td>
-                    <td><i class="fa fa-lg" data-bind="css: DirectionClass"></i> <span data-bind="text: Change"></span></td>
-                    <td data-bind="text: PercentChange"></td>
+                    <td data-bind="price: Price"></td>
+                    <td data-bind="price: DayOpen"></td>
+                    <td data-bind="price: DayHigh"></td>
+                    <td data-bind="price: DayLow"></td>
+                    <td><i data-bind="direction: Change"></i> <span data-bind="price: Change"></span></td>
+                    <td data-bind="percent: PercentChange"></td>
                 </tr>
             </tbody>
         </table>
@@ -37,8 +37,8 @@
                 <li class="loading" data-bind="visible: stocks.length == 0">loading...</li>
                 <!-- ko foreach: stocks  -->
                 <li><span class="symbol" data-bind="text: Symbol"></span>
-                    <span data-bind="text: Price"></span> 
-                    <span class="change"><i class="fa fa-lg" data-bind="css: DirectionClass"></i> <span data-bind="text: Change"></span> (<span data-bind="text: PercentChange"></span>)</span>
+                    <span data-bind="price: Price"></span>
+                    <span class="change"><i data-bind="direction: Change"></i> <span data-bind="text: Change"></span> (<span data-bind="percent: PercentChange"></span>)</span>
                 </li>
                 <!-- /ko -->
             </ul>
